# vw_issue_1245

./: README.md  memory_leak_proc_1499751726.txt  run.sh
predict/: .gitignore  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool  predictTest
predict/.deps/: predictTest-predictTest.Po  predictTest-vw_predict_model.Po
predict/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
predict/include/: vw_predict_model.h
predict/src/: vw_predict_model.cpp
predict/test/src/: predictTest.cpp
